# update-bin

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs
